src/objects/Goals_Results__c.object
<CustomObject>
    <description>Related object for Account Plans</description>
    <fields>
        <fullName>Bookings_Target__c</fullName>
        <label>FY Bookings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <label>YTD Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Click_to_return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Account Plan. After saving, click to return to the master record.</inlineHelpText>
        <label>Account Plan Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFDC_Acct_Plan__c.RecordType.DeveloperName</field>
                <operation>startsWith</operation>
                <value>Acct</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Financial Targets</relationshipLabel>
        <relationshipName>Account_Plan_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Target_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id,  TEXT(Click_to_return__r.Planning_Year__c) + &apos; - &apos; + TEXT(Geography__c)  ,&apos;_top&apos;)</formula>
        <label>Financial Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Actual__c</fullName>
        <label>YTD GM %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GM_Target__c</fullName>
        <label>FY GM% Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Americas (all regions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>GM % Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_Goal__c</fullName>
        <label>FY Gross Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_YTD_Bookings__c</fullName>
        <description>Max value of Quarterly Financials Bookings</description>
        <label>YTD Bookings</label>
        <summarizedField>Quarterly_Financials__c.YTD_Bookings__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Financial_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_YTD_GM__c</fullName>
        <description>Max value of Quarterly Financials GM %</description>
        <label>YTD GM %</label>
        <summarizedField>Quarterly_Financials__c.YTD_GM__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Financial_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_YTD_Gross_Revenue__c</fullName>
        <description>Max value of Quarterly Financials Gross Revenue</description>
        <label>YTD Gross Revenue</label>
        <summarizedField>Quarterly_Financials__c.YTD_Gross_Revenue__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Financial_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_YTD_Net_Revenue__c</fullName>
        <description>Max value of Quarterly Financials Net Revenue</description>
        <label>YTD Net Revenue</label>
        <summarizedField>Quarterly_Financials__c.YTD_Net_Revenue__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Financial_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Goal__c</fullName>
        <label>FY Net Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qtr_Review_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select Quarterly Review. After saving this record, click to return to the Qtr Review.</inlineHelpText>
        <label>Qtr Review Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFDC_Acct_Plan__c.RecordType.DeveloperName</field>
                <operation>startsWith</operation>
                <value>Qtr</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Financial_Goals_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qtr_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inherited from the Quarterly Review Record - click to return</inlineHelpText>
        <label>Qtr Review Record ID</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Financial_Goals_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <inlineHelpText>Net Service Revenue (Gross minus subs and other revenue)</inlineHelpText>
        <label>NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Gross_Revenue__c</fullName>
        <label>YTD Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Net_Revenue__c</fullName>
        <label>YTD Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Click_to_return__c</columns>
        <columns>Bookings__c</columns>
        <columns>Geography__c</columns>
        <columns>Gross_Revenue_Goal__c</columns>
        <columns>Net_Revenue_Goal__c</columns>
        <columns>Qtr_Review_Record__c</columns>
        <columns>Qtr_Review__c</columns>
        <columns>Revenue__c</columns>
        <columns>YTD_Gross_Revenue__c</columns>
        <columns>YTD_Net_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Goal-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Targets</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_Goals</fullName>
        <active>true</active>
        <description>For Account Plans</description>
        <label>Account Plan Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revenue_and_Bookings</fullName>
        <active>true</active>
        <description>For Quarterly Reviews</description>
        <label>Revenue and Bookings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>